task4/ingress_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: ubuntu-web-service
                port:
                  number: 80
          - path: /hotstar
            pathType: Prefix
            backend:
              service:
                name: hotstar-loadbalancer
                port:
                  number: 80
